CI: configure chart releaser

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,132 @@
 name: Release Charts
-
 on:
   push:
     branches:
       - main
+      - fix-chart-releaser
+    paths:
+      - 'charts/**'
 
 jobs:
-  release:
-    permissions:
-      contents: write
+  detect-changes:
     runs-on: ubuntu-latest
+    outputs:
+      guard-changed: ${{ steps.filter.outputs.guard }}
+      watch-changed: ${{ steps.filter.outputs.watch }}
+      path-changed: ${{ steps.filter.outputs.path }}
+      any-changed: ${{ steps.filter.outputs.any_changed }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      
+      - name: Check for modified charts
+        id: filter
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            guard:
+              - 'charts/guard/**'
+            watch:
+              - 'charts/watch/**'
+            path:
+              - 'charts/path/**'
+          
+      - name: Set any_changed output
+        run: |
+          if [[ "${{ steps.filter.outputs.guard }}" == "true" || "${{ steps.filter.outputs.watch }}" == "true" || "${{ steps.filter.outputs.path }}" == "true" ]]; then
+            echo "any_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "any_changed=false" >> $GITHUB_OUTPUT
+          fi
 
+  release-guard:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.guard-changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-      - name: Run chart-releaser
+      
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+      
+      - name: Release guard chart
         uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: true
+        with:
+          charts_dir: charts
+          charts_repo_url: https://github.com/${{ github.repository }}
+          config: .github/cr-config-guard.yaml
 
+  release-watch:
+    needs: [detect-changes, release-guard]
+    if: needs.detect-changes.outputs.watch-changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+      
+      - name: Release watch chart
+        uses: helm/chart-releaser-action@v1.6.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: true
+        with:
+          charts_dir: charts
+          charts_repo_url: https://github.com/${{ github.repository }}
+          config: .github/cr-config-watch.yaml
+
+  release-path:
+    needs: [detect-changes, release-watch]
+    if: needs.detect-changes.outputs.path-changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+      
+      - name: Release path chart
+        uses: helm/chart-releaser-action@v1.6.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: true
+        with:
+          charts_dir: charts
+          charts_repo_url: https://github.com/${{ github.repository }}
+          config: .github/cr-config-path.yaml
