--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       guard-changed: ${{ steps.filter.outputs.guard }}
       watch-changed: ${{ steps.filter.outputs.watch }}
       path-changed: ${{ steps.filter.outputs.path }}
-      any-changed: ${{ steps.filter.outputs.any_changed }}
+      any-changed: ${{ steps.any_changed.outputs.any_changed }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,16 +34,22 @@ jobs:
               - 'charts/path/**'
           
       - name: Set any_changed output
+        id: any_changed
         run: |
           if [[ "${{ steps.filter.outputs.guard }}" == "true" || "${{ steps.filter.outputs.watch }}" == "true" || "${{ steps.filter.outputs.path }}" == "true" ]]; then
             echo "any_changed=true" >> $GITHUB_OUTPUT
           else
             echo "any_changed=false" >> $GITHUB_OUTPUT
           fi
+          
+          # Debug outputs
+          echo "Guard changed: ${{ steps.filter.outputs.guard }}"
+          echo "Watch changed: ${{ steps.filter.outputs.watch }}"
+          echo "Path changed: ${{ steps.filter.outputs.path }}"
 
   release-guard:
     needs: detect-changes
-    if: needs.detect-changes.outputs.guard-changed == 'true'
+    if: ${{ needs.detect-changes.outputs.guard-changed == 'true' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -73,7 +79,7 @@ jobs:
 
   release-watch:
     needs: [detect-changes, release-guard]
-    if: needs.detect-changes.outputs.watch-changed == 'true'
+    if: ${{ needs.detect-changes.outputs.watch-changed == 'true' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -103,7 +109,7 @@ jobs:
 
   release-path:
     needs: [detect-changes, release-watch]
-    if: needs.detect-changes.outputs.path-changed == 'true'
+    if: ${{ needs.detect-changes.outputs.path-changed == 'true' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
