--- a/.github/cr-config-path.yaml
+++ b/.github/cr-config-path.yaml
@@ -1,7 +1,6 @@
 chart-dirs:
   - charts
-exclude-charts:
-  - charts/guard
-  - charts/watch
+charts:
+  - charts/path
 index-path: ./index.yaml
 release-name-template: "{{ .Name }}-{{ .Version }}"
