--- a/.github/cr-config-watch.yaml
+++ b/.github/cr-config-watch.yaml
@@ -1,9 +1,6 @@
 chart-dirs:
   - charts
-exclude-charts:
-  - charts/guard
-  - charts/path
+charts:
+  - charts/watch
 index-path: ./index.yaml
 release-name-template: "{{ .Name }}-{{ .Version }}"
-
-
