Add current branch to release.yaml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - fix-chart-releaser
+      - fix-CI-chart-releaser
     paths:
       - 'charts/**'
 
